@@ -3,13 +3,15 @@
   <metadata>
     <id><%= PRODUCT_CODE %></id>
     <version><%= FULLVERSIONSTRING %></version>
-    <authors><%= COMPANY_NAME %></authors>
+    <authors><%= COMPANY_NAME %>, Medhi Golam</authors>
     <owners><%= COMPANY_NAME %></owners>
     <language>en-US</language>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <summary><%= SUMMARY %></summary>
     <description><%= DESCRIPTION %></description>
     <releaseNotes><%= NOTES %></releaseNotes>
+    <projectUrl>https://github.com/janderit/fastJson</projectUrl>
+    <projectUrl>http://www.codeproject.com/Articles/159450/fastJSON</projectUrl>
     <copyright><%= COPYRIGHT %></copyright>
     <!--<dependencies>
       <group targetFramework="net40">
